6/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app-controller
          image: httpd:2.4
          ports:
            - containerPort: 80
