6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  type: ClusterIP
  ports:
  - port: 2368
    name: ghost
    targetPort: 2368
  selector:
    app: ghost
