6/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: app2
    targetPort: 80
  selector:
    app: app2
