6/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-proxy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: app1.192.168.39.234.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ghost
              servicePort: 2368
    - host: app2.192.168.39.234.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: app2
              servicePort: 80
